2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: fixed/added
	  debug messages for 'Bug 566249 - InvalidCastException when
	  deleting some text in the text editor'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug
	  560510 - Preprocessor enabled code shows as comment anyway'.

2010-01-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Render as the
	  inside of a button, so it matches button styling. Use
	  depressed state when popup active.

2009-12-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Use proper
	  enums for values instead of letting them get cached as
	  strings and having to reparse them every time.

2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Use some of the new
	  icons.

2009-12-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Re-enable
	  syntax error underlining. No idea why Mike disabled it, but
	  it's far more useful than error bubbles.

2009-12-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Check that
	  file exists before getting its old attributes.

2009-12-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Escape now
	  closes drop down.

2009-12-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Improved the
	  drawing of the tiny drop down box.

2009-12-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Keyboard now
	  works in tiny drop down.

2009-12-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/TinyDropDownBox.cs: Added spacing
	  for the right arrows.

2009-12-03  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am: